# quincy-tun

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yaml
src/: builder.rs  lib.rs
src/async_device/: mod.rs
src/async_device/unix/: mod.rs  tokio.rs
src/async_device/windows/: mod.rs
src/platform/: mod.rs
src/platform/freebsd/: device.rs  sys.rs
src/platform/linux/: checksum.rs  device.rs  mod.rs  offload.rs
src/platform/macos/: device.rs  mod.rs  sys.rs  tuntap.rs
src/platform/unix/: device.rs  fd.rs  mod.rs  sockaddr.rs  tun.rs
src/platform/windows/: device.rs  dns.rs  ffi.rs  interrupt.rs  mod.rs  netsh.rs
src/platform/windows/tun/: adapter.rs  adapter_win7.rs  mod.rs  wintun_raw.rs
tests/: quincy_api.rs
